--- a/src/main/resources/ValidationMessages_pl.properties
+++ b/src/main/resources/ValidationMessages_pl.properties
@@ -1,3 +1,2 @@
-javax.validation.constraints.Min.message = Minimal value: {min}
+javax.validation.constraints.Size.message = Minimum length: {min} characters
 org.hibernate.validator.constraints.pl.PESEL.message = Incorrect PESEL number
-
